# Client-Server-ChatApplication

./: .gitignore  .gitmodules  CMakeLists.txt  logger.hpp  main.cpp  readme.md  server.cpp
client/: CMakeLists.txt  client.cpp
